--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
         <div class="showcase__btn-group btn-group">
           <a href="#" class="btn btn--action btn--large btn--dark btn-group-btn">$99.99 per year <span
               class="btn-group-btn-pill">16% off</span></a>
-          <a href="#" class="btn btn--action btn--large btn--dark btn-group-btn">$0 this month <span class="btn-group-btn-pill">100% off</span></a>
+          <a href="main.html" class="btn btn--action btn--large btn--dark btn-group-btn">$0 this month <span class="btn-group-btn-pill">100% off</span></a>
         </div>
 
       </div>
 
     </section>
 
-    <video loop autoplay class="background__video">
+    <video loop muted autoplay class="background__video">
       <source src="./assets/images/background_video.webm" type="video/webm">
       <source src="./assets/images/background_video.mp4" type="video/mp4">
     </video>
