--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
           <div class="block">
             <img class="" src="https://play-lh.googleusercontent.com/0oO5sAneb9lJP6l8c6DH4aj6f85qNpplQVHmPmbbBxAukDnlO7DarDW0b-kEIHa8SQ" alt="">
             <p class="text-1">Press the button</p>
-            <p class="text-2"> <a href="https://youtu.be/dQw4w9WgXcQ">Press Me</a> </p>
+            <p class="text-2"> <a href="https://youtu.be/PXqcHi2fkXI">Press Me</a> </p>
           </div>
         </div>
 
